deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: costy-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.k8s.io/router.entrypoints: web
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: costy
            port:
              number: 80
